// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatatableComponent it renders actions column when there are row actions 1`] = `
<VisualizationContainer
  reportTitle="My fanci metric chart"
>
  <ContextProvider
    value={
      Object {
        "rowHasRowClickTriggerActions": Array [
          true,
          true,
          true,
        ],
        "table": Object {
          "columns": Array [
            Object {
              "id": "a",
              "meta": Object {
                "field": "a",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "terms",
                },
                "type": "string",
              },
              "name": "a",
            },
            Object {
              "id": "b",
              "meta": Object {
                "field": "b",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "date_histogram",
                },
                "type": "date",
              },
              "name": "b",
            },
            Object {
              "id": "c",
              "meta": Object {
                "field": "c",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "count",
                },
                "type": "number",
              },
              "name": "c",
            },
          ],
          "rows": Array [
            Object {
              "a": "shoes",
              "b": 1588024800000,
              "c": 3,
            },
          ],
          "type": "datatable",
        },
      }
    }
  >
    <EuiDataGrid
      aria-label="My fanci metric chart"
      columnVisibility={
        Object {
          "setVisibleColumns": [Function],
          "visibleColumns": Array [
            "a",
            "b",
            "c",
          ],
        }
      }
      columns={
        Array [
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "a",
            "displayAsText": "a",
            "id": "a",
          },
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "b",
            "displayAsText": "b",
            "id": "b",
          },
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "c",
            "displayAsText": "c",
            "id": "c",
          },
        ]
      }
      gridStyle={
        Object {
          "border": "horizontal",
          "header": "underline",
        }
      }
      onColumnResize={[Function]}
      renderCellValue={[Function]}
      rowCount={1}
      sorting={
        Object {
          "columns": Array [],
          "onSort": [Function],
        }
      }
      toolbarVisibility={false}
      trailingControlColumns={
        Array [
          Object {
            "headerCellRender": [Function],
            "id": "trailingControlColumn",
            "rowCellRender": [Function],
            "width": 40,
          },
        ]
      }
    />
  </ContextProvider>
</VisualizationContainer>
`;

exports[`DatatableComponent it renders the title and value 1`] = `
<VisualizationContainer
  reportTitle="My fanci metric chart"
>
  <ContextProvider
    value={
      Object {
        "rowHasRowClickTriggerActions": undefined,
        "table": Object {
          "columns": Array [
            Object {
              "id": "a",
              "meta": Object {
                "field": "a",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "terms",
                },
                "type": "string",
              },
              "name": "a",
            },
            Object {
              "id": "b",
              "meta": Object {
                "field": "b",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "date_histogram",
                },
                "type": "date",
              },
              "name": "b",
            },
            Object {
              "id": "c",
              "meta": Object {
                "field": "c",
                "source": "esaggs",
                "sourceParams": Object {
                  "indexPatternId": "indexPatternId",
                  "type": "count",
                },
                "type": "number",
              },
              "name": "c",
            },
          ],
          "rows": Array [
            Object {
              "a": "shoes",
              "b": 1588024800000,
              "c": 3,
            },
          ],
          "type": "datatable",
        },
      }
    }
  >
    <EuiDataGrid
      aria-label="My fanci metric chart"
      columnVisibility={
        Object {
          "setVisibleColumns": [Function],
          "visibleColumns": Array [
            "a",
            "b",
            "c",
          ],
        }
      }
      columns={
        Array [
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "a",
            "displayAsText": "a",
            "id": "a",
          },
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "b",
            "displayAsText": "b",
            "id": "b",
          },
          Object {
            "actions": Object {
              "showHide": false,
              "showMoveLeft": false,
              "showMoveRight": false,
              "showSortAsc": Object {
                "label": "Sort asc",
              },
              "showSortDesc": Object {
                "label": "Sort desc",
              },
            },
            "cellActions": undefined,
            "display": "c",
            "displayAsText": "c",
            "id": "c",
          },
        ]
      }
      gridStyle={
        Object {
          "border": "horizontal",
          "header": "underline",
        }
      }
      onColumnResize={[Function]}
      renderCellValue={[Function]}
      rowCount={1}
      sorting={
        Object {
          "columns": Array [],
          "onSort": [Function],
        }
      }
      toolbarVisibility={false}
      trailingControlColumns={Array []}
    />
  </ContextProvider>
</VisualizationContainer>
`;
